--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
     "css-loader": "^3.6.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.19",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
